crates/runtime/src/search/snapshots/runtime__search__types__tests__transpose_and_convert_all_rows_empty.snap
---
source: crates/runtime/src/search/types.rs
expression: sort_result(v)
snapshot_kind: text
---
[
  [],
  [],
  []
]
