crates/runtime/src/search/snapshots/runtime__search__types__tests__transpose_and_convert_mixed_empty_and_non_empty_rows.snap
---
source: crates/runtime/src/search/types.rs
expression: sort_result(v)
snapshot_kind: text
---
[
  [
    [
      "key1",
      [
        "A"
      ]
    ]
  ],
  [],
  [
    [
      "key1",
      [
        "B"
      ]
    ]
  ]
]
