crates/runtime/src/search/snapshots/runtime__search__types__tests__transpose_and_convert_single_column.snap
---
source: crates/runtime/src/search/types.rs
expression: sort_result(v)
snapshot_kind: text
---
[
  [
    [
      "key1",
      "A"
    ]
  ],
  [
    [
      "key1",
      "B"
    ]
  ],
  []
]
